--- a/app/src/main/res/layout/item_movies.xml
+++ b/app/src/main/res/layout/item_movies.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="150dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -11,6 +11,7 @@
         android:layout_height="150dp"
         android:contentDescription="@string/app_name"
         android:scaleType="fitXY"
+        android:src="@color/cardview_dark_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -41,6 +42,8 @@
         app:layout_constraintStart_toEndOf="@+id/item_movie_image"
         app:layout_constraintTop_toBottomOf="@+id/item_movie_title"
         tools:text="Views: 100" />
+
+
 
     <TextView
         android:id="@+id/item_movie_rating"
