--- a/app/src/main/res/layout/fragment_onboarding_screen3.xml
+++ b/app/src/main/res/layout/fragment_onboarding_screen3.xml
@@ -4,11 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".OnboardingScreen3Fragment">
 
-    <FrameLayout
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:foreground="@drawable/onboarding3_foreground"
+        android:scaleType="centerCrop"
+        android:src="@drawable/onboarding3" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:gravity="center"
+        android:text="Real Time Updates Movie Trailer"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:layout_marginTop="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
