--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- PROJECT COLORS -->
+    <color name="orange">#E79035</color>
+    <color name="pink">#CC5068</color>
+
+    <!-- ONBOARDING -->
+    <color name="onboarding2_yellow">#B49A3F</color>
+    <color name="transparent">#00000000</color>
+    <color name="onboarding3_blue">#050B1B</color>
 </resources>
