--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -86,6 +86,7 @@
         android:hint="Your Password"
         android:maxLines="1"
         android:background="@color/transparent"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="@+id/login_formBackground_vw"
         app:layout_constraintEnd_toEndOf="@+id/login_formBackground_vw"
         app:layout_constraintStart_toStartOf="@+id/login_formBackground_vw"
