--- a/app/src/main/res/layout/item_movies.xml
+++ b/app/src/main/res/layout/item_movies.xml
@@ -1,78 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="8dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-
-        <ImageView
-                android:id="@+id/item_movie_image"
-                android:layout_width="110dp"
-                android:layout_height="150dp"
-                android:contentDescription="@string/app_name"
-                android:scaleType="fitXY"
-                android:src="@color/cardview_dark_background"
+        <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardCornerRadius="25dp"
+                android:elevation="10dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                                android:id="@+id/item_movie_image"
+                                android:layout_width="150dp"
+                                android:layout_height="200dp"
+                                android:contentDescription="@string/app_name"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/sixunderground"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent" />
 
 
-        <TextView
-                android:id="@+id/item_movie_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                app:layout_constraintStart_toEndOf="@+id/item_movie_image"
-                app:layout_constraintTop_toTopOf="@+id/item_movie_image"
-                tools:text="Avengers" />
-
-        <TextView
-                android:id="@+id/item_movie_genre"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginStart="30dp"
-                android:textColor="@android:color/black"
-                android:textSize="14sp"
-                app:layout_constraintStart_toEndOf="@+id/item_movie_image"
-                app:layout_constraintTop_toBottomOf="@+id/item_movie_title"
-                tools:text="Views: 100" />
+                <TextView
+                        android:id="@+id/item_movie_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginStart="30dp"
+                        android:paddingStart="16dp"
+                        android:paddingEnd="16dp"
+                        android:textColor="@android:color/black"
+                        android:textSize="20sp"
+                        app:layout_constraintStart_toEndOf="@+id/item_movie_image"
+                        app:layout_constraintTop_toTopOf="@+id/item_movie_image"
+                        tools:text="Avengers" />
 
 
-        <TextView
-                android:id="@+id/item_movie_rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="16dp"
-                android:layout_marginTop="8dp"
-                android:paddingEnd="16dp"
-                android:layout_marginStart="30dp"
-                android:textColor="@android:color/black"
-                android:textSize="14sp"
-                app:layout_constraintStart_toEndOf="@+id/item_movie_image"
-                app:layout_constraintTop_toBottomOf="@+id/item_movie_genre"
-                tools:text="Release Date: 16 Feb 2018" />
+                        <TextView
+                                android:id="@+id/item_movie_genre"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:paddingStart="16dp"
+                                android:paddingEnd="16dp"
+                                android:layout_marginTop="20dp"
+                                android:layout_marginStart="28dp"
+                                android:textColor="@android:color/black"
+                                android:textSize="14sp"
+                                app:layout_constraintStart_toEndOf="@+id/item_movie_image"
+                                app:layout_constraintTop_toBottomOf="@+id/item_movie_title"
+                                tools:text="Views: 100" />
 
-        <TextView
-                android:id="@+id/item_price_ticket"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="16dp"
-                android:layout_marginTop="8dp"
-                android:paddingEnd="16dp"
-                android:layout_marginStart="30dp"
-                android:textColor="@android:color/black"
-                android:textSize="14sp"
-                app:layout_constraintStart_toEndOf="@+id/item_movie_image"
-                app:layout_constraintTop_toBottomOf="@+id/item_movie_rating"
-                tools:text="Ticket price" />
+                        <TextView
+                                android:id="@+id/item_movie_rating"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:paddingStart="16dp"
+                                android:layout_marginTop="20dp"
+                                android:paddingEnd="16dp"
+                                android:layout_marginStart="28dp"
+                                android:textColor="@android:color/black"
+                                android:textSize="14sp"
+                                app:layout_constraintStart_toEndOf="@+id/item_movie_image"
+                                app:layout_constraintTop_toBottomOf="@+id/item_movie_genre"
+                                tools:text="Release Date: 16 Feb 2018" />
+
+                        <TextView
+                                android:id="@+id/item_price_ticket"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:paddingStart="16dp"
+                                android:layout_marginTop="8dp"
+                                android:paddingEnd="16dp"
+                                android:layout_marginStart="28dp"
+                                android:textColor="@android:color/black"
+                                android:textSize="14sp"
+                                app:layout_constraintStart_toEndOf="@+id/item_movie_image"
+                                app:layout_constraintTop_toBottomOf="@+id/item_movie_rating"
+                                tools:text="Ticket price"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintVertical_bias="0.196" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
