--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,6 +9,12 @@
     <fragment
         android:id="@+id/landingPage"
         android:name="com.decadevs.accessmovies.LandingPageFragment"
-        android:label="fragment_landing_page"
+        android:label="Movie"
         tools:layout="@layout/fragment_landing_page" />
+
+    <fragment
+            android:id="@+id/addMovieFragment"
+            android:name="com.decadevs.accessmovies.AddMovieFragment"
+            android:label="Add Image"
+            tools:layout="@layout/fragment_add_movie" />
 </navigation>
