--- a/app/src/main/res/layout/fragment_add_movie.xml
+++ b/app/src/main/res/layout/fragment_add_movie.xml
@@ -4,20 +4,20 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         tools:context=".AddMovieFragment">
 
 
-    <EditText
+     <EditText
             android:id="@+id/fragment_add_movie_title_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/title_str"
             android:padding="10dp"
+            android:background="@drawable/add_movie_button_border"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -30,10 +30,11 @@
             android:layout_height="wrap_content"
             android:hint="@string/genre_str"
             android:padding="10dp"
+           android:background="@drawable/add_movie_button_border"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_title_et"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,10 +47,11 @@
             android:layout_height="wrap_content"
             android:hint="@string/rating_str"
             android:padding="10dp"
+            android:background="@drawable/add_movie_button_border"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_genre_et"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -62,10 +64,11 @@
             android:layout_height="wrap_content"
             android:hint="@string/country_str"
             android:padding="10dp"
+        android:background="@drawable/add_movie_button_border"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_ratings_et"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -78,10 +81,11 @@
             android:layout_height="wrap_content"
             android:hint="@string/release_date_str"
             android:padding="10dp"
+        android:background="@drawable/add_movie_button_border"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_country_et"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -94,10 +98,11 @@
             android:layout_height="wrap_content"
             android:hint="@string/ticket_price_str"
             android:padding="10dp"
+        android:background="@drawable/add_movie_button_border"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_release_date_et"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -110,10 +115,11 @@
             android:layout_height="wrap_content"
             android:hint="@string/description_str"
             android:padding="10dp"
+            android:background="@drawable/add_movie_button_border"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
             app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_ticket_price_et"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -121,26 +127,34 @@
             app:layout_constraintHorizontal_bias="0.0" />
 
     <Button
-            android:id="@+id/fragment_add_movie_up_photo_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="@string/add_photo_str"
-            android:textAllCaps="false"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_description"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="12dp" />
+        android:id="@+id/fragment_add_movie_up_photo_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
+        android:paddingStart="30dp"
+        android:paddingTop="15dp"
+        android:paddingEnd="30dp"
+        android:paddingBottom="15dp"
+        android:text="@string/add_photo_str"
+        android:textAllCaps="false"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_description" />
 
     <Button
-            android:id="@+id/fragment_add_movie_add_image_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/add_movie_str"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_up_photo_btn"
-            android:layout_marginTop="48dp"
-            app:layout_constraintHorizontal_bias="0.544" />
+        android:id="@+id/fragment_add_movie_add_image_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="84dp"
+        android:paddingStart="50dp"
+        android:paddingTop="15dp"
+        android:paddingEnd="50dp"
+        android:paddingBottom="15dp"
+        android:text="@string/add_movie_str"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_up_photo_btn" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
