--- a/app/src/main/res/layout/fragment_landing_page.xml
+++ b/app/src/main/res/layout/fragment_landing_page.xml
@@ -20,6 +20,15 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_movies" />
 
+
+    <Button
+        android:id="@+id/testing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="go to add movie screen"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 <!--    <ProgressBar-->
 <!--        android:id="@+id/progress_bar"-->
 <!--        android:layout_width="wrap_content"-->
