--- a/app/src/main/res/layout/toolbar_fragment.xml
+++ b/app/src/main/res/layout/toolbar_fragment.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:text="@string/add_movie_str_major"
         android:textSize="18sp"
-        android:textColor="@android:color/black"
+        android:textColor="@color/blue"
         style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
         android:layout_gravity="center"
         />
