validate user input for add movie screen

--- a/app/src/main/res/layout/item_movies.xml
+++ b/app/src/main/res/layout/item_movies.xml
@@ -21,79 +21,101 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
                         <ImageView
-                                android:id="@+id/item_movie_image"
-                                android:layout_width="150dp"
-                                android:layout_height="200dp"
-                                android:contentDescription="@string/app_name"
-                                android:scaleType="fitXY"
-                                android:src="@drawable/sixunderground"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintBottom_toBottomOf="parent" />
-
-
-                <TextView
-                        android:id="@+id/item_movie_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginStart="30dp"
-                        android:paddingStart="16dp"
-                        android:paddingEnd="16dp"
-                        android:textColor="@android:color/black"
-                        android:textSize="20sp"
-                        app:layout_constraintStart_toEndOf="@+id/item_movie_image"
-                        app:layout_constraintTop_toTopOf="@+id/item_movie_image"
-                        tools:text="Avengers" />
+                            android:id="@+id/item_movie_image"
+                            android:layout_width="150dp"
+                            android:layout_height="200dp"
+                            android:contentDescription="@string/app_name"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/sixunderground"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
 
 
                         <TextView
-                                android:id="@+id/item_movie_genre"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:paddingStart="16dp"
-                                android:paddingEnd="16dp"
-                                android:layout_marginTop="20dp"
-                                android:layout_marginStart="28dp"
-                                android:textColor="@android:color/black"
-                                android:textSize="14sp"
-                                app:layout_constraintStart_toEndOf="@+id/item_movie_image"
-                                app:layout_constraintTop_toBottomOf="@+id/item_movie_title"
-                                tools:text="Views: 100" />
+                            android:id="@+id/item_movie_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="10dp"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:paddingStart="10dp"
+                            android:paddingEnd="10dp"
+                            android:textColor="@android:color/black"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.0"
+                            app:layout_constraintStart_toEndOf="@+id/item_movie_image"
+                            app:layout_constraintTop_toTopOf="@+id/item_movie_image"
+                            tools:text="Avengers" />
 
                         <TextView
-                                android:id="@+id/item_movie_rating"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:paddingStart="16dp"
-                                android:layout_marginTop="20dp"
-                                android:paddingEnd="16dp"
-                                android:layout_marginStart="28dp"
-                                android:textColor="@android:color/black"
-                                android:textSize="14sp"
-                                app:layout_constraintStart_toEndOf="@+id/item_movie_image"
-                                app:layout_constraintTop_toBottomOf="@+id/item_movie_genre"
-                                tools:text="Release Date: 16 Feb 2018" />
+                            android:id="@+id/item_movie_genre"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="10dp"
+                            android:paddingStart="10dp"
+                            android:paddingEnd="10dp"
+                            android:textColor="@android:color/black"
+                            android:textSize="14sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.02"
+                            app:layout_constraintStart_toEndOf="@+id/item_movie_image"
+                            app:layout_constraintTop_toBottomOf="@+id/item_movie_title"
+                            tools:text="Views: 100" />
 
                         <TextView
-                                android:id="@+id/item_price_ticket"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:paddingStart="16dp"
-                                android:layout_marginTop="8dp"
-                                android:paddingEnd="16dp"
-                                android:layout_marginStart="28dp"
-                                android:textColor="@android:color/black"
-                                android:textSize="14sp"
-                                app:layout_constraintStart_toEndOf="@+id/item_movie_image"
-                                app:layout_constraintTop_toBottomOf="@+id/item_movie_rating"
-                                tools:text="Ticket price"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintVertical_bias="0.196" />
+                            android:id="@+id/item_movie_rating"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="10dp"
+                            android:paddingStart="10dp"
+                            android:paddingEnd="10dp"
+                            android:textColor="@android:color/black"
+                            android:textSize="14sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.0"
+                            app:layout_constraintStart_toEndOf="@+id/item_movie_image"
+                            app:layout_constraintTop_toBottomOf="@+id/item_movie_genre"
+                            tools:text="Release Date: 16 Feb 2018" />
+
+                        <TextView
+                            android:id="@+id/price_placeholder"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/price_str"
+                            android:textSize="16sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toStartOf="@+id/item_price_ticket"
+                            app:layout_constraintTop_toTopOf="@+id/guideline" />
+
+
+                        <TextView
+                            android:id="@+id/item_price_ticket"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingStart="10dp"
+                            android:paddingEnd="15dp"
+                            android:textColor="@color/blue"
+                            android:textSize="18sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="@+id/guideline"
+                            tools:text="Ticket price" />
+
+                        <androidx.constraintlayout.widget.Guideline
+                            android:id="@+id/guideline"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            app:layout_constraintGuide_begin="174dp" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
