--- a/app/src/main/res/layout/fragment_add_movie.xml
+++ b/app/src/main/res/layout/fragment_add_movie.xml
@@ -34,9 +34,10 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/add_movie_button_border"
         android:hint="@string/title_str"
-        android:padding="10dp"
+        android:paddingTop="20dp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
+        android:paddingBottom="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,9 +53,10 @@
         android:inputType="text"
         android:background="@drawable/add_movie_button_border"
         android:hint="@string/genre_str"
-        android:padding="10dp"
+        android:paddingTop="20dp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
+        android:paddingBottom="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,9 +71,10 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/add_movie_button_border"
         android:hint="@string/rating_str"
-        android:padding="10dp"
+        android:paddingTop="20dp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
+        android:paddingBottom="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,9 +90,10 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/add_movie_button_border"
         android:hint="@string/country_str"
-        android:padding="10dp"
+        android:paddingTop="20dp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
+        android:paddingBottom="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,9 +109,10 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/add_movie_button_border"
         android:hint="@string/release_date_str"
-        android:padding="10dp"
+        android:paddingTop="20dp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
+        android:paddingBottom="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -123,9 +128,10 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/add_movie_button_border"
         android:hint="@string/ticket_price_str"
-        android:padding="10dp"
+        android:paddingTop="20dp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
+        android:paddingBottom="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -141,9 +147,10 @@
         android:inputType="text"
         android:background="@drawable/add_movie_button_border"
         android:hint="@string/description_str"
-        android:padding="10dp"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
+        android:paddingTop="20dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:paddingBottom="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -160,6 +167,8 @@
         android:paddingEnd="20dp"
         android:paddingBottom="10dp"
         android:text="@string/add_photo_str"
+        android:textColor="@color/orange"
+        android:background="@drawable/custom_button_outline_bg"
         android:textAllCaps="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_description" />
@@ -169,14 +178,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/custom_button_bg"
         android:paddingStart="50dp"
-        android:textSize="16sp"
         android:paddingTop="15dp"
         android:paddingEnd="50dp"
         android:paddingBottom="15dp"
         android:text="@string/add_movie_str"
+        android:textAllCaps="false"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_up_photo_btn" />
 
