refactor landing page ui

--- a/app/src/main/res/layout/fragment_landing_page.xml
+++ b/app/src/main/res/layout/fragment_landing_page.xml
@@ -39,12 +39,13 @@
             android:id="@+id/landing_SignIn_tv"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Sign In"
+            android:text="@string/sign_in_str"
             android:gravity="end|center"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:layout_weight="1"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
+
     <ImageView
         android:id="@+id/landing_addMovie_imgBtn"
         android:layout_width="50dp"
@@ -68,26 +69,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/landing_heading_ll"
         tools:listitem="@layout/item_movies" />
-
-
-    <Button
-        android:id="@+id/testing"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="go to add movie screen"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-<!--    <ProgressBar-->
-<!--        android:id="@+id/progress_bar"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="@+id/recycler_view"-->
-<!--        tools:visibility="visible" />-->
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
